<resources>
    <string name="app_name">Rune Gemwall</string>
    <string name="home_page_stats_button">Stats</string>
    <string name="home_page_lore_button">Lore</string>
    <string name="home_page_store_button">Store</string>
    <string name="home_page_google_sheets_button">Sheet</string>
    <string name="home_page_chart_button">Monk</string>
    <string name="home_page_class_button">Class</string>
    <string name="home_page_race_button">Race</string>
    <string name="home_page_other_button">B. John</string>
    <string name="home_page_character_name">Rune Gemwall</string>

    <!-- Core Activities -->
    <string name="hp">HP: </string>
    <string name="ac">AC: </string>
    <string name="speed">SPD: </string>
    <string name="ki">Ki: </string>
    <string name="level">LVL: </string>
    <string name="exp">EXP: </string>
    <string name="stats_tab1">Core</string>
    <string name="stats_tab2">Skills</string>
    <string name="stats_tab3">Saving</string>
    <string name="stats_tab4">Equip</string>
    <string name="stats_tab5">Traits</string>

    <!-- Core Stats and Saving Throws Fragment -->
    <string name="strength">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intelligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="charisma">Charisma</string>
    <string name="maxHP">Max HP: </string>
    <string name="tempHP">Temp HP: </string>
    <string name="proficiency">Proficiency: </string>
    <string name="initiative">Initiative: </string>
    <string name="passivePerception">Passive Perception: </string>
    <string name="maxKi">Max Ki: </string>

    <string name="death_saves">Death Saves</string>
    <string name="successes">Successes</string>
    <string name="failures">Failures</string>

    <!-- Equipment -->
    <string name="copper">CP</string>
    <string name="silver">SP</string>
    <string name="electrum">EP</string>
    <string name="gold">GP</string>
    <string name="platinum">PP</string>

    <!-- Lore -->
    <string name="background">Background: Noble</string>
    <string name="alignment">Alignment: Lawful Neutral</string>
    <string name="personality_traits">Personality Traits</string>
    <string name="ideals">Ideals</string>
    <string name="bonds">Bonds</string>
    <string name="flaws">Flaws</string>
    <string name="pt_description">Bubbly, dancer</string>
    <string name="i_description">Everyone have a good time exploring</string>
    <string name="b_description">Monastery of the Sore First and Rosy Palma</string>
    <string name="f_description">Cannot tolerate the presence of milk.  Does not take into account negative consequences</string>

    <!-- Brown John -->
    <string name="brown_john">BROWN JOHN!!</string>
    <string name="player1">Player 1</string>
    <string name="vs">VS</string>
    <string name="player2">Player 2</string>
    <string name="roll">Roll!</string>
    <string name="d20">D20</string>
    <string name="d12">D12</string>
    <string name="d8">D8</string>
    <string name="result">Result</string>

</resources>
