<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".activities.Lore_Activity">

    <TextView
        android:id="@+id/lorePlayerName"
        android:text="@string/home_page_character_name"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/loreBackground"
        android:text="@string/background"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lorePlayerName"
        app:layout_constraintBottom_toTopOf="@id/loreAlignment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/loreAlignment"
        android:text="@string/alignment"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loreBackground"
        app:layout_constraintBottom_toTopOf="@id/lorePersonalityTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <!-- Personality -->
    <TextView
        android:id="@+id/lorePersonalityTitle"
        android:text="@string/personality_traits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/lorePersonalityBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/lorePersonalityBox"
        android:background="@drawable/tab_shape"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/loreAlignment"
        app:layout_constraintBottom_toTopOf="@id/loreIdealsBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/lorePersonalityTraitsDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/lorePersonalityBox"
        app:layout_constraintBottom_toBottomOf="@id/lorePersonalityBox"
        app:layout_constraintLeft_toLeftOf="@id/lorePersonalityBox"
        app:layout_constraintRight_toRightOf="@id/lorePersonalityBox"/>

    <!-- Ideals -->
    <TextView
        android:id="@+id/loreIdealsTitle"
        android:text="@string/ideals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/loreIdealsBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/loreIdealsBox"
        android:background="@drawable/tab_shape"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/lorePersonalityBox"
        app:layout_constraintBottom_toTopOf="@id/loreBondsBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/loreIdealsDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/loreIdealsBox"
        app:layout_constraintBottom_toBottomOf="@id/loreIdealsBox"
        app:layout_constraintLeft_toLeftOf="@id/loreIdealsBox"
        app:layout_constraintRight_toRightOf="@id/loreIdealsBox"/>

    <!-- Bonds -->
    <TextView
        android:id="@+id/loreBondsTitle"
        android:text="@string/bonds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/loreBondsBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/loreBondsBox"
        android:background="@drawable/tab_shape"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/loreIdealsBox"
        app:layout_constraintBottom_toTopOf="@id/loreFlawsBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/loreBondsDescription"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/loreBondsBox"
        app:layout_constraintBottom_toBottomOf="@id/loreBondsBox"
        app:layout_constraintLeft_toLeftOf="@id/loreBondsBox"
        app:layout_constraintRight_toRightOf="@id/loreBondsBox"/>

    <!-- Flaws -->
    <TextView
        android:id="@+id/loreFlawsTitle"
        android:text="@string/flaws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/loreFlawsBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/loreFlawsBox"
        android:background="@drawable/tab_shape"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/loreBondsBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/loreFlawsDescription"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/loreFlawsBox"
        app:layout_constraintBottom_toBottomOf="@id/loreFlawsBox"
        app:layout_constraintLeft_toLeftOf="@id/loreFlawsBox"
        app:layout_constraintRight_toRightOf="@id/loreFlawsBox"/>

</android.support.constraint.ConstraintLayout>